# rag-chatbot

./: .env.example  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile-hf  Dockerfile.railway  RAG_Chatbot_SpecDriven.md  RAILWAY_DEPLOY.md  README.md  app.py  main.py  mcp_server.py  pyproject.toml  railway.json  requirements-hf.txt  requirements.txt  server.py  server_app.py  simple_server.py  start.sh  test_performance.py  test_rag_agent.py  test_server.py  urls.txt
agent/: rag_agent.py
agents/: rag_agent.py
api/: chat.py  main.py
api/routes/: chat.py  ingest.py
config/: settings.py
data/: chapter1.md  chapter2.md  chapter3.md
database/: postgres_client.py
frontend/: chat-widget.css  chat-widget.js  embed.html
hf_deploy/: app.py  server.py
hf_deploy/backend/agent/: rag_agent.py  tools.py
hf_deploy/backend/api/: models.py
hf_deploy/backend/ingestion/: db_store.py  embedder.py  vector_store.py
ingestion/: chunker.py  db_store.py  embedder.py  local_ingestion.py  run.py  scraper.py  selenium_sitemap_ingestion.py  sitemap_ingestion.py  sophisticated_sitemap_ingestion.py  vector_store.py
retrieval/: retriever.py  test_pipeline.py
src/: config.py  main.py
src/api/: __init__.py  chat.py
src/models/: conversation.py  message.py  question.py  response.py
src/rag_book_ingestion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rag_ingestion/: __main__.py  chunker.py  crawler.py  deployment.py  embedder.py  logger.py  text_cleaner.py  text_extractor.py  vector_store.py
src/utils/: logging.py
vector_store/: retriever.py
(+10 files in other folders)
