[project]
name = "rag-book-ingestion"
version = "0.1.0"
description = "RAG Book Ingestion Pipeline for Humanoid Robotics Textbook"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "cohere>=4.0.0",
    "qdrant-client>=1.9.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rag_ingestion*"]